<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_ItemSimulator_IO" Id="{efde5ac1-62f5-47f4-a8ad-9534b47c9e37}">
    <Declaration><![CDATA[TYPE ST_ItemSimulator_IO :
STRUCT
	bSignalOut	AT %Q* 			:BOOL;
	bSignalIn	AT %I* 			:BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>