<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="FB_WriteTCP" Id="{2823f21e-401f-4604-9aa6-b1a50011eeab}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_WriteTCP 
VAR_INPUT
	stTCPConnection		:ST_TCPConnection;
	aEANRegistry		:ARRAY[0..GVL_Constant.ITEM_ARRAY_SIZE] OF T_MaxString;
END_VAR
VAR_OUTPUT
	bIsConnected		:BOOL;
END_VAR
VAR
	fbConnectSocket		:FB_SocketConnect;
	fbDisconnect		:FB_SocketClose;
	rConnectedSocket	:F_TRIG;
	fbSocketSend		:FB_SocketSend;
	rWriteComplete		:R_TRIG;
	aWriteBytes			:ARRAY[0..1023] OF BYTE;
	iWrite				:UINT;
	WriteSignal			:F_TRIG;
	nWriteLen			:UDINT;
	i					:INT;

	bWriteComplete		:BOOL;
	bResetEANRegistry	:BOOL;
	hSocket				:T_HSOCKET;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[
A_ConnectToWriteSocket();

IF bIsConnected THEN
	A_WriteToTCPSocket();
END_IF


]]></ST>
    </Implementation>
    <Action Name="A_ConnectToWriteSocket" Id="{9184a013-1471-41e3-b622-1eef6260e719}">
      <Implementation>
        <ST><![CDATA[IF stTCPConnection.bSocketConnect THEN
	
	//Connect write port
	fbConnectSocket(
		sRemoteHost:=stTCPConnection.sRemoteHost,
		nRemotePort:=stTCPConnection.nRemotePort, 
		bExecute:=TRUE,
		tTimeout:=stTCPConnection.tTimeOut,
		hSocket=>hSocket);
	ELSE
		//Disconnect write port
		fbConnectSocket(bExecute:=FALSE);
		fbDisconnect(hSocket:=hSocket);
		bIsConnected := FALSE;
END_IF



rConnectedSocket(CLK:=fbConnectSocket.bBusy);

IF rConnectedSocket.Q AND NOT fbConnectSocket.bError THEN
	bIsConnected := TRUE;
END_IF
]]></ST>
      </Implementation>
    </Action>
    <Action Name="A_WriteToTCPSocket" Id="{6ac199b7-4bab-4dab-a6e9-4e6425fd1242}">
      <Implementation>
        <ST><![CDATA[IF bIsConnected THEN	
	//Falling edge of item generator
	WriteSignal(CLK:=GVL_IO.stItemSimulator.bSignalOut);
	
	IF WriteSignal.Q THEN
		//Get length of string written
		nWriteLen := INT_TO_UDINT(LEN(STR:=aEANRegistry[iWrite]));
	
		//Copy string into array of bytes
		MEMCPY(destAddr:=ADR(aWriteBytes),srcAddr:=ADR(aEANRegistry[iWrite]),n:=nWriteLen);
		iWrite := iWrite + 1;
	END_IF
		
	//Write byte array to TCP server
	fbSocketSend(
		hSocket:=hSocket, 
		cbLen:=nWriteLen,
		pSrc:=ADR(aWriteBytes),
		bExecute:=WriteSignal.Q AND PRG_Simulator.fbItemGenerator.stItemGenFromReg.bEnableGenerator);
END_IF;


//Reset registry of EAN strings
IF PRG_Simulator.bStartGenerator OR PRG_Simulator.bStopGenerator OR (PRG_Simulator.i > PRG_Simulator.nTimeCount) OR bResetEANRegistry THEN
	FOR i := 0 TO GVL_Constant.ITEM_ARRAY_SIZE DO 
		aEANRegistry[i] := '';
	END_FOR

	iWrite := 0;	
	
	//Reset Command
	bResetEANRegistry := FALSE;
END_IF
]]></ST>
      </Implementation>
    </Action>
    <LineIds Name="FB_WriteTCP">
      <LineId Id="71" Count="0" />
      <LineId Id="36" Count="0" />
      <LineId Id="53" Count="0" />
      <LineId Id="52" Count="0" />
      <LineId Id="54" Count="1" />
      <LineId Id="17" Count="0" />
      <LineId Id="39" Count="0" />
      <LineId Id="38" Count="0" />
    </LineIds>
    <LineIds Name="FB_WriteTCP.A_ConnectToWriteSocket">
      <LineId Id="2" Count="22" />
      <LineId Id="1" Count="0" />
    </LineIds>
    <LineIds Name="FB_WriteTCP.A_WriteToTCPSocket">
      <LineId Id="2" Count="32" />
      <LineId Id="1" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>